# veip-registry

./: Makefile  README.md  pyproject.toml
.github/workflows/: .gitignore  ci.yml
docs/: operator-model.md  threat-model.md
tests/: fixture_pack.json  test_api.py  test_schema_validation.py
veip_registry/: app.py  schema.py  storage.py
veip_registry.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
