# pyproject.toml
[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "veip-registry"
version = "0.1.0"
description = "Minimal multi-operator registry (stub) for schema-validated intake + retrieval of VEIP Evidence Packs."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE.md" }
authors = [{ name = "Veraxis Protocol" }]
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn>=0.27.0",
  "jsonschema>=4.22.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]


[tool.setuptools]
packages = ["veip_registry"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
